--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,24 +1,28 @@
-# service configuration for our dockerized Rails app
 db:
   image: postgres:9.4.5
   volumes:
     - docker-example-postgres:/var/lib/postgresql/data
+web:
+  build: .
+  # build with a different Dockerfile
+  dockerfile: config/containers/Dockerfile-nginx
+  # makes the web container aware of the app container
+  links:
+    - app
+  # expose the port we configured Nginx to bind to
+  ports:
+    - "80:80"
 app:
-
   # use the Dockerfile next to this file
   build: .
-
   # sources environment variable configuration for our app
   env_file: .env
-
   # rely on the RAILS_ENV value of the host machine
   environment:
     RAILS_ENV: $RAILS_ENV
-
   # makes the app container aware of the DB container
   links:
     - db
-
   # expose the port we configured Unicorn to bind to
-  ports:
-    - "3000:3000"
+  expose:
+    - "3000"
